@@ -280,6 +280,8 @@ SMSCConn *smscconn_create(CfgGroup *grp, int start_as_stopped)
         ret = smsc_smasi_create(conn, grp);
     else if (octstr_compare(smsc_type, octstr_imm("oisd")) == 0)
         ret = smsc_oisd_create(conn, grp);
+    else if (octstr_compare(smsc_type, octstr_imm("loopback")) == 0)
+        ret = smsc_loopback_create(conn, grp);
     else
         ret = smsc_wrapper_create(conn, grp);
 
